Fix dropdown toggle z-index to appear above lobby cursor labels

--- a/client/src/components/Dropdown.css
+++ b/client/src/components/Dropdown.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   min-width: 180px;
+  z-index: 150;
 }
 
 .dropdown-toggle {
